[gd_scene load_steps=31 format=3 uid="uid://pvyn7gdlrx0n"]

[ext_resource type="PackedScene" uid="uid://bkldnsyj7ttcb" path="res://objs/mobs/mob_obj.tscn" id="1_r1732"]
[ext_resource type="Script" path="res://objs/mobs/goblin/goblin.gd" id="2_3phvq"]
[ext_resource type="PackedScene" uid="uid://cssb781x4gm31" path="res://objs/resourse/gold.tscn" id="3_g216c"]
[ext_resource type="Texture2D" uid="uid://cupuknsirc7xq" path="res://assets/Рыцари/Tiny Swords (Update 010)/Factions/Goblins/Troops/Torch/Blue/Torch_Blue.png" id="4_3m6ps"]
[ext_resource type="AudioStream" uid="uid://bqghv0k46qmws" path="res://assets/audio/goblin_atack.ogg" id="5_e1bco"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nabet"]
atlas = ExtResource("4_3m6ps")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfhfh"]
atlas = ExtResource("4_3m6ps")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_et1is"]
atlas = ExtResource("4_3m6ps")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnj4b"]
atlas = ExtResource("4_3m6ps")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsvli"]
atlas = ExtResource("4_3m6ps")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgnfw"]
atlas = ExtResource("4_3m6ps")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_o15lk"]
atlas = ExtResource("4_3m6ps")
region = Rect2(1152, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxw2j"]
atlas = ExtResource("4_3m6ps")
region = Rect2(0, 240, 192, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_58o4i"]
atlas = ExtResource("4_3m6ps")
region = Rect2(192, 240, 192, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_kak10"]
atlas = ExtResource("4_3m6ps")
region = Rect2(384, 240, 192, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4x38"]
atlas = ExtResource("4_3m6ps")
region = Rect2(576, 240, 192, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8be1"]
atlas = ExtResource("4_3m6ps")
region = Rect2(768, 240, 192, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhcqy"]
atlas = ExtResource("4_3m6ps")
region = Rect2(960, 240, 192, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gm40"]
atlas = ExtResource("4_3m6ps")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5clt2"]
atlas = ExtResource("4_3m6ps")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_reop1"]
atlas = ExtResource("4_3m6ps")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ct6f"]
atlas = ExtResource("4_3m6ps")
region = Rect2(576, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5h8d6"]
atlas = ExtResource("4_3m6ps")
region = Rect2(768, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlxvc"]
atlas = ExtResource("4_3m6ps")
region = Rect2(960, 384, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_fqohs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nabet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfhfh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_et1is")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnj4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsvli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgnfw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o15lk")
}],
"loop": true,
"name": &"Idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxw2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58o4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kak10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4x38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8be1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhcqy")
}],
"loop": true,
"name": &"Walk",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gm40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5clt2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_reop1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ct6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5h8d6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlxvc")
}],
"loop": true,
"name": &"atack",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3b3w5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bvof4"]

[sub_resource type="Animation" id="Animation_q03ky"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anim:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Anim:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Anim:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Anim:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_x5oqv"]
resource_name = "invulnerability"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anim:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Anim:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Anim:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Anim:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4oxyy"]
_data = {
"RESET": SubResource("Animation_q03ky"),
"invulnerability": SubResource("Animation_x5oqv")
}

[node name="Goblin" instance=ExtResource("1_r1732")]
collision_mask = 51
script = ExtResource("2_3phvq")
chance_of_coin_drop = 0.5
drop_scene = ExtResource("3_g216c")

[node name="HealthBar" parent="." index="1"]
position = Vector2(-57, -57)

[node name="Anim" type="AnimatedSprite2D" parent="." index="2"]
process_mode = 3
position = Vector2(2, 5)
scale = Vector2(0.571615, 0.552083)
sprite_frames = SubResource("SpriteFrames_fqohs")
animation = &"Idle"
autoplay = "Idle"

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="." index="4"]
navigation_layers = 16
avoidance_enabled = true

[node name="NavigationTimer" type="Timer" parent="." index="5"]
wait_time = 0.196
autostart = true

[node name="ZoneAtack" type="Area2D" parent="." index="6"]
modulate = Color(1, 0.501961, 0.435294, 1)
position = Vector2(0, 11)
scale = Vector2(1.80731, 2.98896)
collision_layer = 4
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZoneAtack" index="0"]
position = Vector2(7.27584, -0.269476)
scale = Vector2(0.660399, 0.349848)
shape = SubResource("RectangleShape2D_3b3w5")
debug_color = Color(1, 1, 1, 0.419608)

[node name="FindPlayerZone" type="Area2D" parent="." index="7"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="FindPlayerZone" index="0"]
position = Vector2(1, 9)
scale = Vector2(18.7153, 18.7153)
shape = SubResource("CircleShape2D_bvof4")

[node name="TimerAtackKD" type="Timer" parent="." index="8"]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="9"]
libraries = {
"": SubResource("AnimationLibrary_4oxyy")
}

[node name="Atack" type="AudioStreamPlayer2D" parent="." index="10"]
stream = ExtResource("5_e1bco")
volume_db = -15.0
max_distance = 500.0

[connection signal="on_damage" from="." to="." method="_on_on_damage"]
[connection signal="on_death" from="." to="." method="_on_on_death"]
[connection signal="timeout" from="NavigationTimer" to="." method="_on_timer_navigation_timeout"]
[connection signal="timeout" from="TimerAtackKD" to="." method="_on_timer_atack_kd_timeout"]
